fix content  overflow

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -166,6 +166,7 @@ $hero-body-padding: 4rem 1.5rem
 
   .is-main
     flex: 1
+    overflow-x: hidden
 
 =logo($desk, $tab, $touch)
   +desktop
